# tree-sitter-meson

./: Package.swift  grammar.js  meson.build
bindings/swift/TreeSitterMeson/: meson.h
examples/: debug-meson.build  literals-meson.build  playground-meson.build  poppler-meson.build
src/: grammar.json  node-types.json  parser.c  tsm.h
